# tiny-llm

./: README.md  module-3.md  module-4.md  pyproject.toml  training.drawio
doc/: module-1.md  module-2.md  module-3.md  training.ipynb
tests/: test_utils.py
tests/output_model/: tokenizer.json
tiny_llm/: 1_tokenizer.py  2_embedding.py  3_transformer_attention.py  final.ipynb  inference.py  llm.ipynb  main.py  new_llm.ipynb  tiny_english_gpt.npz  training.py  utils.py  wiki.ipynb
tiny_llm/io/: tiny_stories_tokenizer.json  tokenizer.json
tiny_llm/modules/: a_data.py  a_data_prep.py  b_tables.py  b_weight_tables.py  c_trainer.py  c_training.py  d_forward_pass.py  d_transformer_block.py  e_transformer_block.py  utils.py
