[project]
name = "tiny-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad Saadat",email = "47593578+ahmadsaadat@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
