[project]
name = "tiny_llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad Saadat",email = "47593578+ahmadsaadat@users.noreply.github.com"}
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "datasets (>=4.8.5,<5.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "tokenizers (>=0.23.1,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"